--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Login</title>
-    <script src="/js/visitedPages.js" defer></script>
+    <link rel="stylesheet" href="/css/output.css" />
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -15,31 +15,29 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="/js/toggleTruncate.js" defer></script>
-    <script src="/js/passTheCollectionId.js"></script>
-    <script src="/js/toggleCommentIndex.js" defer></script>
-    <script src="/js/toggleItemsIndex.js" defer></script>
-    <script type="module" src="/js/commentBoxOpenIndex.js"></script>
-
-    <script src="/js/BackButton/visitedPages.js" defer></script>
 
     <script>
-      document.addEventListener("DOMContentLoaded", function () {
+      document.addEventListener('DOMContentLoaded', function () {
         // Retrieve the visitedUrls stack from sessionStorage
-        let visitedUrls = JSON.parse(sessionStorage.getItem("visitedUrls")) || [];
-    
+        let visitedUrls =
+          JSON.parse(sessionStorage.getItem('visitedUrls')) || [];
+
         // Add the current URL to the stack
         if (!visitedUrls.includes(window.location.href)) {
           visitedUrls.push(window.location.href);
         }
-    
+
         // Save the updated stack back to sessionStorage
-        sessionStorage.setItem("visitedUrls", JSON.stringify(visitedUrls));
+        sessionStorage.setItem('visitedUrls', JSON.stringify(visitedUrls));
       });
     </script>
 
-    <link rel="stylesheet" href="/css/output.css" />
+    <script src="/js/visitedPages.js" defer></script>
+    <script src="/js/toggleTruncate.js" defer></script>
+    <script src="/js/toggleItemsIndex.js" defer></script>
+    <script src="/js/BackButton/visitedPages.js" defer></script>
   </head>
+
   <body id="scrollablePage">
     <header>
       <nav class="navbar">
@@ -48,9 +46,10 @@
             <div id="logoHomeButton">
               <a href="/index">
                 <img
-                class="h-5"
-                src="/images/Shelved_Logo_White.png"
-                alt="Shelved Logo"/>
+                  class="h-5"
+                  src="/images/Shelved_Logo_White.png"
+                  alt="Shelved Logo"
+                />
               </a>
             </div>
           </li>
@@ -75,31 +74,29 @@
           <span class="text-sm font-semibold">No collections yet</span>
         </div>
       </div>
+
       <div th:if="${collections != null}">
         <div class="flex flex-col items-center justify-center w-full bg-white">
           <!-- COLLECTION CONTAINER -->
           <div
-            th:each="collection : ${collections}"
-            class="collectionContainer"
-            th:id="${collection.id}"
+          th:each="collection : ${collections}"
+          th:id="'collection-' + ${collection.id}"
+          class="collectionContainer"
           >
             <!-- COLLECTION NAVBAR -->
-            <div
-              th:id="'collection-' + ${collection.id}"
-              class="collectionContainerNavbar collectionNavbar shadow-sm"
-            >
+            <div class="collectionContainerNavbar collectionNavbar shadow-sm">
               <div class="flex justify-between items-center w-full">
                 <div>
                   <ul class="flex justify-start items-center w-full">
                     <li class="pr-2">
                       <a
-                        th:if="${collection.user.id != null}"
+                        th:if="${collection?.user?.id != null}"
                         th:href="@{/profile/{id}(id=${collection.user.id})}"
                       >
                         <img
                           class="h-7 w-7 rounded-full bg-white"
-                          th:src="${users != null && collection.user.id != null && users[collection.user.id]?.profilePictureUrl != null ? users[collection.user.id].profilePictureUrl : '/images/default-profile-photo.png'}"
-                          th:alt="${users != null && collection.user.id != null ? users[collection.user.id]?.username : 'Default Username'}"
+                          th:src="${users != null && collection?.user?.id != null && users[collection.user.id]?.profilePictureUrl != null ? users[collection.user.id].profilePictureUrl : '/images/default-profile-photo.png'}"
+                          th:alt="${users != null && collection?.user?.id != null ? users[collection.user.id]?.username : 'Default Username'}"
                         />
                       </a>
                     </li>
@@ -130,7 +127,7 @@
                 th:href="@{/collection/{id}(id=${collection.id})}"
               >
                 <img
-                  th:src="${collection.imageUrl}"
+                  th:src="${#strings.defaultString(collection?.imageUrl, '/images/default-collection-image.png')}"
                   alt="Collection Cover"
                   class="w-full object-cover aspect-square"
                 />
@@ -185,40 +182,39 @@
                     <li class="flex flex-row justify-start items-center pr-2">
                       <div class="flex justify-start items-center">
                         <form
-                          th:if="${collection?.id != null}"
-                          th:action="@{/collections/{collectionId}/like-from-index (collectionId=${collection.id})}"
+                          th:action="@{/collections/{collectionId}/like-from-index (collectionId=${collection?.id})}"
                           method="post"
                         >
                           <input
                             type="hidden"
                             name="collectionId"
-                            th:value="${collection.id}"
+                            th:value="${collection?.id}"
                           />
                           <input
                             type="hidden"
                             name="userId"
-                            th:value="${user.id}"
+                            th:value="${user?.id}"
                           />
                           <input
                             type="hidden"
                             name="liked"
-                            th:value="${collection.isLiked}"
+                            th:value="${collection?.isLiked ?: false}"
                           />
 
                           <button
                             type="submit"
                             class="likeButton"
-                            th:if="${collection.user.id != user.id}"
+                            th:if="${collection?.user?.id != user?.id}"
                           >
                             <span
                               class="pr-2 font-medium"
-                              th:if="${collection?.isLiked}"
+                              th:if="${collection?.isLiked ?: false}"
                             >
                               &#9829;
                             </span>
                             <span
                               class="pr-2 font-medium"
-                              th:if="${collection?.isLiked != null && !collection.isLiked}"
+                              th:if="${collection?.isLiked == null || !collection.isLiked}"
                             >
                               &#9825;
                             </span>
@@ -226,7 +222,7 @@
                           <button
                             type="button"
                             class="likeButton"
-                            th:if="${collection.user.id == user.id}"
+                            th:if="${collection?.user?.id == user?.id}"
                             disabled
                           >
                             <span
@@ -238,6 +234,7 @@
                           </button>
                         </form>
                       </div>
+                      <!-- LIKE COUNT -->
                       <div class="flex justify-start items-center">
                         <p
                           class="font-thin"
@@ -248,19 +245,10 @@
 
                     <li class="flex flex-row justify-start items-center pr-2">
                       <a
-                        th:if="${collection.id != null}"
-                        th:id="'commentToggle-' + ${collection.id}"
-                        class="commentToggle cursor-pointer"
-                        th:attr="data-collection-id=${collection.id}"
-                        onclick="passCollectionId(this.getAttribute('data-collection-id'))"
+                        th:href="@{/collection/{id}/comments(id=${collection.id})}"
+                        class="collectionCommentButton pr-2 font-medium"
                       >
-                        <!-- onclick trigger the comment activity box to have the collection id -->
-                        <span
-                          th:id="'collectionCommentButton-' + ${collection.id}"
-                          class="collectionCommentButton pr-2 font-medium"
-                        >
-                          comment
-                        </span>
+                        comment
                       </a>
                       <span
                         class="font-thin"
@@ -268,17 +256,6 @@
                       ></span>
                     </li>
                   </ul>
-                </div>
-
-                <!-- COMMENT BOX EXIT -->
-                <div
-                  id="collectionCommentBoxExit"
-                  th:id="'collectionCommentBoxExit-' + ${collection.id}"
-                  class="collectionCommentBoxExit hidden"
-                >
-                  <a>
-                    <span class="font-semibold">X</span>
-                  </a>
                 </div>
               </div>
 
@@ -321,163 +298,11 @@
                 </div>
               </div>
             </div>
-
-            <!-- COLLECTION COMMENT BOX -->
-            <div
-              th:id="'collectionCommentBox-' + ${collection.id}"
-              class="collectionCommentBox hidden mt-2"
-              th:attr="data-collection-id=${collection.id}"
-            >
-              <!-- Comment Template -->
-              <div
-                class="px-3 pt-1 pb-2"
-                th:each="comment : ${collection.comments}"
-              >
-                <div
-                  class="w-full h-auto flex flex-row justify-start items-start text-sm"
-                >
-                  <!-- Profile Picture -->
-                  <div id="imageBoxComment" class="flex-shrink-0 w-10">
-                    <a th:href="@{/profile/{id}(id=${comment.user.id})}">
-                      <img
-                        class="h-7 w-7 rounded-full bg-white"
-                        th:src="${comment.user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
-                        alt="Profile Picture"
-                      />
-                    </a>
-                  </div>
-
-                  <!-- Content Box -->
-                  <div
-                    id="contentBoxComment"
-                    class="flex flex-col items-start w-full"
-                  >
-                    <div class="flex flex-row justify-start items-start w-full">
-                      <!-- Profile Link -->
-                      <div class="flex items-start">
-                        <a
-                          th:href="@{/profile/{id}(id=${comment.user.id})}"
-                          class="flex items-start"
-                        >
-                          <span
-                            style="font-size: 10px; line-height: 1"
-                            class="font-semibold leading-[1]"
-                            th:if="${comment.user?.username != null}"
-                            th:text="${comment.user?.username}"
-                          ></span>
-                        </a>
-                      </div>
-
-                      <!-- Time Container -->
-                      <div class="pl-2 flex items-end">
-                        <span
-                          style="font-size: 8px; line-height: 1"
-                          class="font-thin leading-[1]"
-                        >
-                          6h
-                        </span>
-                      </div>
-                    </div>
-
-                    <div class="flex flex-row justify-start items-start">
-                      <span
-                        class="font-light truncate-multiline"
-                        onclick="toggleTruncate(this)"
-                        th:text="${comment.content}"
-                      ></span>
-                    </div>
-
-                    <div
-                      style="font-size: 8px; line-height: 1"
-                      class="w-full flex flex-col justify-center items-start pt-1 pr-2 text-slate-500 font-semibold"
-                    >
-                      <a id="replyButton" class="cursor-pointer">
-                        <span class="leading-[1.2]">Reply</span>
-                      </a>
-                    </div>
-
-                    <!-- REPLY BOX GOES HERE -->
-                  </div>
-                  <!-- Like Box -->
-                  <div
-                    th:id="'likeBox-' + ${comment.id}"
-                    class="flex flex-col justify-start items-center"
-                  >
-                    <div class="flex flex-row justify-center items-center">
-                      <form
-                        th:if="${comment?.id != null}"
-                        th:action="@{/comments/{id}/like(id=${comment?.id})}"
-                        method="post"
-                      >
-                        <input
-                          type="hidden"
-                          name="commentId"
-                          th:value="${comment.id}"
-                        />
-                        <input
-                          type="hidden"
-                          name="userId"
-                          th:value="${user.id}"
-                        />
-                        <input
-                          type="hidden"
-                          name="liked"
-                          th:value="${comment.isLiked}"
-                        />
-                        <button
-                          type="submit"
-                          class="likeButton"
-                          th:if="${comment.user != null && comment.user.id != user.id}"
-                        >
-                          <span
-                            style="font-size: 10px; line-height: 1"
-                            class="font-medium text-xs"
-                            th:if="${comment.isLiked}"
-                          >
-                            &#9829;
-                          </span>
-                          <span
-                            style="font-size: 10px; line-height: 1"
-                            class="font-medium text-xs"
-                            th:if="${!comment.isLiked}"
-                          >
-                            &#9825;
-                          </span>
-                        </button>
-                        <button
-                          th:id="'like-button-' + ${comment.id}"
-                          type="button"
-                          class="likeButton"
-                          th:if="${comment.user != null && comment.user.id == user.id}"
-                          disabled
-                        >
-                          <span
-                            style="font-size: 10px; line-height: 1"
-                            class="font-medium text-xs"
-                          >
-                            &#9829;
-                          </span>
-                        </button>
-                      </form>
-                    </div>
-
-                    <div class="flex flex-row justify-center items-center">
-                      <p
-                        th:id="'likeCount-' + ${comment.id}"
-                        style="font-size: 10px; line-height: 1"
-                        class="font-thin text-xs"
-                        th:text="${comment.likeCount != null ? comment.likeCount : '0'}"
-                      ></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
+          <!-- END OF COLLECTION CONTAINER -->
         </div>
       </div>
     </div>
-
     <footer>
       <div
         class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center"
@@ -485,7 +310,10 @@
         <div id="footerNavContent" class="footerNav">
           <ul class="flex justify-between items-center w-full">
             <li>
-              <div id="homeButton" class="h-4 w-4 flex items-center justify-center">
+              <div
+                id="homeButton"
+                class="h-4 w-4 flex items-center justify-center"
+              >
                 <a class="text-2xl font-bold" href="/index">&#8962;</a>
               </div>
             </li>
@@ -511,45 +339,6 @@
               </a>
             </li>
           </ul>
-        </div>
-
-        <!-- COMMENT FOOTER -->
-
-        <div id="commentActivity" class="commentNav hidden">
-          <div id="commentInputContainer" class="w-full">
-            <form
-              th:action="@{/collections/{collectionId}/comment-from-index (collectionId=${collection?.id})}"
-              method="post"
-              class="commentForm flex flex-row w-full items-center justify-center px-2 bg-white"
-            >
-              <a href="/profile" class="w-10">
-                <img
-                  class="h-7 w-7 rounded-full bg-white"
-                  th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
-                  alt="Profile Picture"
-                />
-              </a>
-              <input
-                class="commentFormCollectionIdInput"
-                type="hidden"
-                name="collectionId"
-                th:value="${collection?.id ?: ''}"
-              />
-              <input
-                type="text"
-                name="content"
-                placeholder="Leave a comment..."
-                class="w-full border-none outline-none focus:ring-0 text-sm font-thin bg-slate-100 rounded-md px-2 py-1 mx-2"
-              />
-              <button
-                id="commentButton"
-                type="submit"
-                class="text-sm bg-blue-500 text-white font-semibold text-center h-full w-7"
-              >
-                <span>C</span>
-              </button>
-            </form>
-          </div>
         </div>
       </div>
     </footer>
