--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -193,11 +193,12 @@
                 class="truncate-multiline leading-[1rem]"
                 onclick="toggleTruncate(this)"
               >
-                <a href="/profile">
+
+                <a th:href="@{/profile/{id}(id=${userProfile?.id})}">
                   <span
                     class="font-semibold"
-                    th:if="${user?.username != null}"
-                    th:text="${user?.username}"
+                    th:if="${userProfile?.username != null}"
+                    th:text="${userProfile?.username}"
                   ></span>
                 </a>
                 <span
@@ -244,9 +245,7 @@
             </li>
             <li>
               <div class="h-4 w-4 flex items-center justify-center">
-                <!-- <a class="text-2xl font-bold" th:href="@{/create-item/{collectionId}(collectionId=${collection.id})}">
-                  &#43;
-                </a> -->
+
               </div>
             </li>
             <li>
